--- a/ParKingZNe/src/main/resources/application.properties
+++ b/ParKingZNe/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-d19gpe2li9vc7380bv3g-a.virginia-postgres.render.com/bdparkingzne
+spring.datasource.url=jdbc:postgresql://dpg-d19gpe2li9vc7380bv3g-a.virginia-postgres.render.com/dbparkingzne_j9mv
 spring.datasource.username=dbparkingzne_j9mv_user
 spring.datasource.password=0Yp3aNbsuY85g0CqcDt9jYVE5Rwx5vlk
 
